# jules_poc

./: .gitignore  README.md  pyproject.toml  test_perf.py
.jules/: bolt.md
src/hello_jules/: main.py
tests/: test_main.py
